Rename to Hoardi + comprehensive improvements
Branding:
- Rename plugin from Hoarder to Hoardi
- Update all commands, permissions, and messages
- Add comprehensive README.md

Sorting improvements:
- Each leaf category gets its own chest by default
- Only merge categories when not enough chests available
- Fix overflow: cram items instead of losing them
- Split wood/misc into separate categories (sticks, bowls, ladders, scaffolding)

Bug fixes:
- Clear shelf inventory before breaking to prevent item drops
- Prevent displayed preview items from dropping when shelf destroyed

--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.hoarder</groupId>
-    <artifactId>Hoarder</artifactId>
+    <groupId>de.hoardi</groupId>
+    <artifactId>Hoardi</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>Hoarder</name>
+    <name>Hoardi</name>
     <description>Intelligent auto-sorting chest network with shelf previews for Minecraft</description>
 
     <properties>
