--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,9 @@ target/
 .DS_Store
 Thumbs.db
 
+# Environment/Secrets
+.env
+.env.local
+
 # Testserver runtime data (keep docker-compose.yml)
 test/data/
