--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -64,7 +64,10 @@ paths:
   wood/bamboo: [BAMBOO, BAMBOO_BLOCK, STRIPPED_BAMBOO_BLOCK, BAMBOO_PLANKS, BAMBOO_SLAB, BAMBOO_STAIRS, BAMBOO_FENCE, BAMBOO_FENCE_GATE, BAMBOO_DOOR, BAMBOO_TRAPDOOR, BAMBOO_PRESSURE_PLATE, BAMBOO_BUTTON, BAMBOO_SIGN, BAMBOO_WALL_SIGN, BAMBOO_HANGING_SIGN, BAMBOO_WALL_HANGING_SIGN, BAMBOO_RAFT, BAMBOO_CHEST_RAFT, BAMBOO_MOSAIC, BAMBOO_MOSAIC_SLAB, BAMBOO_MOSAIC_STAIRS]
   wood/crimson: [CRIMSON_STEM, STRIPPED_CRIMSON_STEM, CRIMSON_HYPHAE, STRIPPED_CRIMSON_HYPHAE, CRIMSON_PLANKS, CRIMSON_SLAB, CRIMSON_STAIRS, CRIMSON_FENCE, CRIMSON_FENCE_GATE, CRIMSON_DOOR, CRIMSON_TRAPDOOR, CRIMSON_PRESSURE_PLATE, CRIMSON_BUTTON, CRIMSON_SIGN, CRIMSON_WALL_SIGN, CRIMSON_HANGING_SIGN, CRIMSON_WALL_HANGING_SIGN, CRIMSON_FUNGUS, CRIMSON_ROOTS, CRIMSON_NYLIUM, NETHER_WART_BLOCK]
   wood/warped: [WARPED_STEM, STRIPPED_WARPED_STEM, WARPED_HYPHAE, STRIPPED_WARPED_HYPHAE, WARPED_PLANKS, WARPED_SLAB, WARPED_STAIRS, WARPED_FENCE, WARPED_FENCE_GATE, WARPED_DOOR, WARPED_TRAPDOOR, WARPED_PRESSURE_PLATE, WARPED_BUTTON, WARPED_SIGN, WARPED_WALL_SIGN, WARPED_HANGING_SIGN, WARPED_WALL_HANGING_SIGN, WARPED_FUNGUS, WARPED_ROOTS, WARPED_NYLIUM, WARPED_WART_BLOCK, NETHER_SPROUTS]
-  wood/misc: [STICK, BOWL, LADDER, SCAFFOLDING]
+  wood/sticks: [STICK]
+  wood/bowls: [BOWL]
+  wood/ladders: [LADDER]
+  building/scaffolding: [SCAFFOLDING]
 
   # Stone variants
   stone/cobblestone: [COBBLESTONE, COBBLESTONE_SLAB, COBBLESTONE_STAIRS, COBBLESTONE_WALL, MOSSY_COBBLESTONE, MOSSY_COBBLESTONE_SLAB, MOSSY_COBBLESTONE_STAIRS, MOSSY_COBBLESTONE_WALL, INFESTED_COBBLESTONE]
